fix: remove overflow

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -147,9 +147,9 @@ ul.hidden li {
   margin-bottom: 250px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 875px) {
   .hero {
-    width: 100%;
+    width: 95%;
 
   }
 }
